--- a/dwca_config/field_mapping/dwca_ices_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_event.yaml
@@ -33,7 +33,7 @@ dwcaEventColumns:
     - maximumDepthInMeters
     - decimalLatitude
     - decimalLongitude
-    - geodeticDatum
+    - geodeticDate
     - coordinateUncertaintyInMeters
     - coordinatePrecision
     - license
