--- a/dwca_config/field_mapping/dwca_ices_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_event.yaml
@@ -130,7 +130,7 @@ dwcaEventContent:
           license:
               text: CC0
           rightsHolder:
-              sourceKey: sampler_orderer_name_en
+              sourceKey: sample_orderer_name_en
           accessRights:
               text: CC0
           institutionCode:
@@ -274,8 +274,8 @@ dwcaEventContent:
               sourceKey:
           license:
               text: CC0
-          #         rightsHolder:
-          #             text: Swedish Agency for Marine and Water Management
+          #          rightsHolder:
+          #              sourceKey: sample_orderer_name_en
           accessRights:
               text: CC0
           institutionCode:
