--- a/dwca_config/dwca_ices_phytobenthos_nat.yaml
+++ b/dwca_config/dwca_ices_phytobenthos_nat.yaml
@@ -63,6 +63,7 @@ translate:
         data_in/resources
     files:
         - translate_ices.txt
+        - translate_ices_nerc.txt
         - translate_ices_stations.txt
         - translate_ices_phytobenthos.txt
 
