--- a/dwca_config/dwca_ices_zoobenthos_nat.yaml
+++ b/dwca_config/dwca_ices_zoobenthos_nat.yaml
@@ -59,6 +59,7 @@ translate:
         data_in/resources
     files:
         - translate_ices.txt
+        - translate_ices_nerc.txt
         - translate_ices_stations.txt
         - translate_ices_zoobenthos.txt
 
