--- a/dwca_config/dwca_ices_zooplankton_nat.yaml
+++ b/dwca_config/dwca_ices_zooplankton_nat.yaml
@@ -57,6 +57,7 @@ translate:
         data_in/resources
     files:
         - translate_ices.txt
+        - translate_ices_nerc.txt
         - translate_ices_stations.txt
         - translate_ices_zooplankton.txt
 
