Added datatype and country to emof

--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -60,6 +60,16 @@ dwcaEmofContent:
         measurementUnit:
         measurementUnitID:
         sourceKey: platform_code
+      - measurementType: country
+        measurementTypeID:
+        measurementUnit:
+        measurementUnitID:
+          text: Sweden
+      - measurementType: ICES datatype
+        measurementTypeID:
+        measurementUnit:
+        measurementUnitID:
+        sourceKey: delivery_datatype
       - measurementType: Wave height
         measurementTypeID:
         measurementUnit: m
