--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -64,7 +64,7 @@ dwcaEmofContent:
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
-          text: Sweden
+        text: "Sweden"
       - measurementType: ICES datatype
         measurementTypeID:
         measurementUnit:
