--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -61,10 +61,9 @@ dwcaEmofContent:
         measurementUnitID:
         sourceKey: platform_code
       - measurementType: country
-        measurementTypeID:
+        measurementTypeID: Sweden
         measurementUnit:
         measurementUnitID:
-          text: "Sweden"
       - measurementType: ICES datatype
         measurementTypeID:
         measurementUnit:
