--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -17,6 +17,7 @@ dwcaEmofColumns:
   - measurementDeterminedBy
   - measurementMethod
   - measurementRemarks
+  - country
 
 dwcaEmofContent:
   - eventType: sampling_event
