Added BEST to purpum

--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -213,7 +213,7 @@ dwcaEmofContent:
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
-        sourceKey: monitoring_purpose_code
+        text: B,E,S,T
       - measurementType: ICES datatype
         measurementTypeID:
         measurementUnit:
