added parent cruise to event

--- a/dwca_config/field_mapping/dwca_ices_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_event.yaml
@@ -71,7 +71,7 @@ dwcaEventContent:
           eventID:
               sourceKey: sampling_event_key
           parentEventID:
-              sourceKey:
+              sourceKey: sampling_cruise_key
           type:
               sourceKey:
           samplingProtocol:
