--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -56,19 +56,16 @@ dwcaEmofContent:
         sourceKey:
       country:
         text: Sweden
+      Platform code:
+        sourceKey: platform_code
+      ICES datatype:
+        sourceKey: delivery_datatype
+      Monitoring program code:
+        sourceKey: monitoring_program_code
+      Monitoring purpose:
+        text: B,E,S,T
 
     extraMeasurements:
-      - measurementType: Platform code
-        measurementTypeID:
-        measurementUnit:
-        measurementUnitID:
-        sourceKey: platform_code
-
-      - measurementType: ICES datatype
-        measurementTypeID:
-        measurementUnit:
-        measurementUnitID:
-        sourceKey: delivery_datatype
       - measurementType: Wave height
         measurementTypeID:
         measurementUnit: m
@@ -174,11 +171,6 @@ dwcaEmofContent:
         measurementUnit:
         measurementUnitID:
         sourceKey: sampling_laboratory_accreditated
-      - measurementType: Monitoring program code
-        measurementTypeID:
-        measurementUnit:
-        measurementUnitID:
-        sourceKey: monitoring_program_code
       - measurementType: Station marking
         measurementTypeID:
         measurementUnit:
@@ -209,11 +201,7 @@ dwcaEmofContent:
         measurementUnit:
         measurementUnitID:
         sourceKey: monitoring_station_type_code
-      - measurementType: Monitoring purpose
-        measurementTypeID:
-        measurementUnit:
-        measurementUnitID:
-        text: B,E,S,T
+
       - measurementType: ICES datatype
         measurementTypeID:
         measurementUnit:
