--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -267,17 +267,17 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/ULAA/"
         sourceKey: flowmeter_length_m
       - measurementType: Mesh size
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MSHSIZE1/ "
         measurementUnit: um
         measurementUnitID:
         sourceKey: mesh_size_um
       - measurementType: Upper mesh size
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MSHSIZE1/ "
         measurementUnit: um
         measurementUnitID:
         sourceKey: upper_mesh_size_um
       - measurementType: Lower mesh size
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MSHSIZE1/ "
         measurementUnit: um
         measurementUnitID:
         sourceKey: lower_mesh_size_um
