changed stratum id to code

--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -505,7 +505,7 @@ dwcaEmofContent:
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
-        sourceKey: stratum_id
+        sourceKey: stratum_code
 
       - measurementType: Trophic type code
         measurementTypeID:
