added substrate code

--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -506,6 +506,11 @@ dwcaEmofContent:
         measurementUnit:
         measurementUnitID:
         sourceKey: stratum_code
+      - measurementType: Substrate type
+        measurementTypeID:
+        measurementUnit:
+        measurementUnitID:
+        sourceKey: substrate_code
 
       - measurementType: Trophic type code
         measurementTypeID:
