--- a/dwca_config/eml_metadata/eml_jellyfish.yaml
+++ b/dwca_config/eml_metadata/eml_jellyfish.yaml
@@ -5,23 +5,20 @@ additionalMetadata:
     metadata:
         gbif:
             citation: >
-                Stockholm University, Umeå University, 
-                Swedish Meteorological and Hydrological Institute, 
-                Gothenburg University, 
-                Swedish Agency for Marine and Water Management and 
-                Swedish Environmental Protection Agency (2022). 
-                SHARK - National marine environmental monitoring of zooplankton in Sweden since 1979
+                Gothenburg University, Swedish Meteorological and Hydrological Institute and
+                Swedish Agency for Marine and Water Management (2023). 
+                SHARK - National marine environmental monitoring of jellyfish in Sweden since 2007
 
 dataset:
     title: >
-        SHARK - National marine environmental monitoring of zooplankton in Sweden since 1979
+        SHARK - National marine environmental monitoring of jellyfish in Sweden since 2007
 
     abstract:
         para:
             - >
-                The national monitoring program was initiated by the Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management.
+                The national monitoring program is financed by the Swedish Agency for Marine and Water Management.
             - >
-                Monitoring is performed by Stockholm University, Umeå University, Swedish Meteorological and Hydrological Institute and Gothenburg University. Data are stored in the Swedish Ocean Archive (SHARK) by the Swedish Meteorological and Hydrological Institute (SMHI).
+                Monitoring is performed by Gothenburg University. Data are stored in the Swedish Ocean Archive (SHARK) by the Swedish Meteorological and Hydrological Institute (SMHI).
             - >
                 Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur. Information about the
                 program and the methods are available in Swedish at the website of Swedish Agency for Marine and Water Management, https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html
@@ -38,7 +35,7 @@ dataset:
     coverage:
         geographicCoverage:
             geographicDescription: >
-                Data are collected within the following marine region: http://marineregions.org/mrgid/2401
+                Data are collected within the following marine region: http://marineregions.org/mrgid/2379
 
         # taxonomicCoverage:
         #     Phylum:
