--- a/dwca_config/eml_metadata/eml_jellyfish.yaml
+++ b/dwca_config/eml_metadata/eml_jellyfish.yaml
@@ -20,17 +20,16 @@ dataset:
             - >
                 Monitoring is performed by Gothenburg University. Data are stored in the Swedish Ocean Archive (SHARK) by the Swedish Meteorological and Hydrological Institute (SMHI).
             - >
-                Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur. Information about the
-                program and the methods are available in Swedish at the website of Swedish Agency for Marine and Water Management, https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html
+                Information about the program and the methods are available in Swedish at the website of Swedish Agency for Marine and Water Management, https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/overvakningsmanualer-for-miljoovervakning/overvakningsmanualer/geleplankton.html
 
     methods:
         methodStep:
             description:
                 para: >
-                    Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur.
+                    Information about the program and the methods are available in Swedish at the website of Swedish Agency for Marine and Water Management, https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/overvakningsmanualer-for-miljoovervakning/overvakningsmanualer/geleplankton.html
         sampling:
             description: >
-                Samples are taken with vertical hauls using a WP-2 net. The samples are preserved and subsequently analyzed using microscopy.
+                Samples are taken with vertical hauls using a WP-3 net. The samples are measured for size and volume using photography and displacement volume.
 
     coverage:
         geographicCoverage:
