--- a/dwca_config/dwca_jellyfish.yaml
+++ b/dwca_config/dwca_jellyfish.yaml
@@ -3,7 +3,7 @@
 # GitHub: https://github.com/sharkdata/darwincore
 
 info: 
-    title: DwC-A configurations for zooplankton - national monitoring
+    title: DwC-A configurations for jellyfish - national monitoring
     description:
         Used to generate DarwinCore-Archive files from SHARK zip files.
 
@@ -11,13 +11,13 @@ dwcaTarget:
     directory:
         data_out
     files: 
-        - dwca-smhi-zooplankton-nat_TEST.zip
+        - dwca-smhi-jellyfish-nat_TEST.zip
 
 sourceFiles:
     directory: 
         data_in/datasets
     globSearch:
-        SHARK_Zooplankton_*_version_*.zip
+        SHARK_Jellyfish_*_version_*.zip
     # files:
     #     - SHARK_Zooplankton_2016_DEEP_version_2020-10-27.zip
     #     # - SHARK_Zooplankton_2016_SMHI_version_2020-10-27.zip
@@ -29,7 +29,7 @@ emlDefinitions:
     files:
         - eml_smhi_datacenter.yaml
         - eml_auto.yaml
-        - eml_zooplankton_nat.yaml
+        - eml_jellyfish_nat.yaml
 
 dwcaKeys:
     directory:
@@ -57,12 +57,12 @@ translate:
         data_in/resources
     files:
         - translate.txt
-        - translate_zooplankton.txt
+        - translate_jellyfish.txt
 
 filters:
     directory:
         data_in/resources
     files:
         - filters.txt
-        - filters_zooplankton_nat.txt
+        - filters_jellyfish_nat.txt
 
