added missing metadata info

--- a/dwca_config/dwca_jellyfish.yaml
+++ b/dwca_config/dwca_jellyfish.yaml
@@ -66,3 +66,30 @@ filters:
         - filters.txt
         - filters_jellyfish_nat.txt
 
+metadataSourceFiles:
+    directory:
+        ../metadata/dcat_ap_se
+    files:
+        - titles.yaml
+        - purpose.yaml
+        - orderer.yaml
+        - methods.yaml
+        - license.yaml
+        - laboratory.yaml
+        - geographic_coverage.yaml
+        - datahost.yaml
+        - keywords.yaml
+        - url_linkage.yaml
+
+metadataTemplate:
+    directory:
+        dwca_config/metadata_templates
+    files: 
+        - yame_jellyfish_nat_template_sv.json
+
+metadataTarget:
+    directory:
+        data_out
+    files: 
+        - yame_jellyfish_nat_sv.json
+
